# promptdiff

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: workflow.py
src/promptdiff/: __init__.py  __main__.py  changelog.py  cli.py  diff.py  eval.py  registry.py  store.py
tests/: test_cli.py  test_cli_extended.py  test_diff_extended.py  test_edge_cases.py  test_nightly_apr01.py  test_nightly_apr03.py  test_promptdiff.py
