[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-promptdiff"
version = "0.1.1"
description = "Git-style diff and version control for LLM prompts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Manas Vardhan", email = "manasvardhan@gmail.com" }]
keywords = ["llm", "prompts", "diff", "version-control", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
embeddings = ["openai>=1.0"]

[project.scripts]
promptdiff = "promptdiff.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/promptdiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
